--- a/css/index.css
+++ b/css/index.css
@@ -6,13 +6,17 @@
     box-sizing: border-box;
  
 }
+.first-page,.second-page{
+    height: 100vh;
+    width: 100vw;
+}
 .nav{
     color: #000;
     font-weight: 400;
     font-size: 30px;
 }
 .main-box{
-    height: calc(100%-120px);
+    height: calc(100vh-120px);
     padding: 0 90px;
 }
 .avtor-box{
@@ -48,4 +52,27 @@
 .small-image{
     width: 100%;
     height:  100%;
+}
+.second-page{
+    padding: 0 90px;
+    display: flex;
+    box-sizing: border-box;
+}
+.left, .right{
+    height: 100%;
+    width: 50%;
+    border-left: 1px #ccc solid;
+    border-right: 1px #ccc solid;
+    position: relative;
+    padding-top: 200px;
+    padding: 150px 60px;
+}
+.contact-button{
+    font-size: 24px;
+    font-weight: 400;
+    color: #000;
+    writing-mode: vertical-lr;
+    position: absolute;
+    right: -32px;
+    top: 100px
 }
