--- a/css/common.css
+++ b/css/common.css
@@ -1,6 +1,7 @@
 body,html{
     margin: 0;
     height: 100%;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 ul,li {
     list-style: none;
